--- a/modules/ROOT/pages/deployment/services/frontend.adoc
+++ b/modules/ROOT/pages/deployment/services/frontend.adoc
@@ -13,7 +13,7 @@ include::partial$deployment/services/beta-statement.adoc[]
 
 == Default Values
 
-* Frontent listens on port 9140 by default.
+* Frontend listens on port 9140 by default.
 
 == Endpoints Overview
 
@@ -38,7 +38,7 @@ The datagateway endpoint, by default `/data`, forwards file up- and download req
 
 === ocs
 
-The ocs endpoint, by default `/ocs`, implements the ownCloud 10 Open Collaboration Services API by translating it into CS3 API requests. It can handle users, groups, capabilities and also implements the files sharing functionality on top of CS3. The `/ocs/v[12].php/cloud/user/signing-key` is currently handled by the dedicated xref:deployment/services/ocs.adoc[ocs] service.
+The ocs endpoint, by default `/ocs`, implements the ownCloud 10 Open Collaboration Services API by translating it into CS3 API requests. It can handle users, groups, capabilities and also implements the file sharing functionality on top of CS3. The `/ocs/v[12].php/cloud/user/signing-key` is currently handled by the dedicated xref:deployment/services/ocs.adoc[ocs] service.
 
 == Scalability
 
