Restructure the service navigation

--- a/modules/ROOT/pages/deployment/services/services.adoc
+++ b/modules/ROOT/pages/deployment/services/services.adoc
@@ -17,90 +17,4 @@ For more details see xref:deployment/general/general-info.adoc#managing-services
 
 There are descriptions and configuration details for each service available.
 
-== General Information
-
-Multiple environment variables for the same purpose::
-+
-[TIP]
-====
-You may see in the tables describing the environment variables that there are two environment variables in the same row configuring the same task. In such a case, the following rule applies:
-
-* The first environment variable is used on a global scale. If set, it will be used in all services where applicable.
-* The second environment variable overwrites the first one, but ONLY for the one particular service.
-
-Taking the `webdav` service as an example, you want to set the `OCIS_URL` as a generic value, but for webdav, you want to use a different URL defined with `OCIS_PUBLIC_URL`.
-====
-
-Service name vs. environment variable name::
-+
-[TIP]
-====
-Environment variable names are always upper case and words are connected with an underscore. They start with the name of the service. If the service name is more than one word and the words are connected with a dash, the dash is replaced by an underscore. This info is useful when you search for environment variables based on the service name.
-
-Example: `auth-basic` -> `AUTH_BASIC_XXX`
-====
-
-Default values containing curly brackets::
-+
-[TIP]
-====
-In the table showing the environment variables of a service, the _Default Value_ cell can sometimes contain values with curly brackets like `{{.Id.OpaqueId}}`. These are valid defaults.
-====
-
-Note on paths for binary vs. container installations::
-If a service offers path customization like the `IDM_LDAPS_CERT` (see the xref:deployment/services/idm.adoc[IDM] documentation), the path set references the environment used. This means, when using the binary installation, the path is based on the host filesystem. When using a container installation, the path references a target inside the container.
-+
-[NOTE]
-====
-When using a container and you want or need to keep all data persistent, you need to provide host filesystem access to the container, which you can do with mounts or volumes.
-====
-
-== Used Port Ranges
-
-The following port ranges are used by services:
-
-[width="65%",cols="~,~",options="header"]
-|===
-| Port Range
-| Service
-
-| 9000-9010  | https://owncloud.dev/ocis/[reserved for Infinite Scale]
-| 9100-9104  | xref:/deployment/services/web.adoc[web]
-| 9105-9109  | https://github.com/owncloud/ocis-hello[hello]
-| 9110-9114  | xref:/deployment/services/ocs.adoc[ocs]
-| 9115-9119  | xref:/deployment/services/webdav.adoc[webdav]
-| 9120-9124  | xref:/deployment/services/graph.adoc[graph]
-| 9125-9129  | FREE (formerly used by glauth)
-| 9130-9134  | xref:/deployment/services/idp.adoc[idp]
-| 9135-9139  | xref:/deployment/services/graph-explorer.adoc[graph-explorer]
-| 9140-9141  | xref:/deployment/services/frontend.adoc[frontend]
-| 9142-9143  | xref:/deployment/services/gateway.adoc[gateway]
-| 9144-9145  | xref:/deployment/services/users.adoc[users]
-| 9146-9147  | xref:/deployment/services/auth-basic.adoc[auth-basic]
-| 9148-9149  | xref:/deployment/services/auth-bearer.adoc[auth-bearer]
-| 9150-9153  | xref:/deployment/services/sharing.adoc[sharing]
-| 9154-9156  | xref:/deployment/services/storage-shares.adoc[storage-shares]
-| 9157-9159  | xref:/deployment/services/storage-users.adoc[storage-users]
-| 9160-9162  | xref:/deployment/services/groups.adoc[groups]
-| 9163       | xref:/deployment/services/ocdav.adoc[ocdav]
-| 9164       | xref:/deployment/services/groups.adoc[groups]
-| 9165       | xref:/deployment/services/app-provider.adoc[app-provider]
-| 9166-9169  | xref:/deployment/services/auth-machine.adoc[auth-machine]
-| 9170-9174  | xref:/deployment/services/notifications.adoc[notifications]
-| 9175-9179  | xref:/deployment/services/storage-publiclink.adoc[storage-publiclink]
-| 9180-9184  | FREE (formerly used by accounts)
-| 9185-9189  | xref:/deployment/services/thumbnails.adoc[thumbnails]
-| 9190-9194  | xref:/deployment/services/settings.adoc[settings]
-| 9195-9199  | FREE
-| 9200-9204  | xref:/deployment/services/proxy.adoc[proxy]
-| 9205-9209  | xref:/deployment/services/proxy.adoc[proxy]
-| 9210-9214  | FREE
-| 9215-9219  | xref:/deployment/services/storage-system.adoc[storage-system]
-| 9220-9224  | xref:/deployment/services/search.adoc[search]
-| 9225-9229  | FREE
-| 9230-9234  | xref:/deployment/services/nats.adoc[nats]
-| 9235-9239  | xref:/deployment/services/idm.adoc[idm]
-| 9240-9244  | xref:/deployment/services/app-registry.adoc[app-registry]
-| 9245-9249  | FREE
-| 9250-9254  | https://github.com/owncloud/ocis/tree/master/ocis/pkg/runtime[ocis server (runtime)]
-|===
+Also see the supporting documents describing various topics around services.
