--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -6,7 +6,7 @@
 ** xref:security/security.adoc[Security Aspects]
 ** xref:prerequisites/prerequisites.adoc[Prerequisites]
 ** xref:deployment/index.adoc[Deployment]
-*** xref:deployment/general/general-info.adoc[General Info]
+*** xref:deployment/general/general-info.adoc[General Information]
 *** xref:deployment/general/ocis-init.adoc[The ocis init Command]
 *** xref:deployment/binary/binary-setup.adoc[Binary Setup]
 *** xref:deployment/container/container-setup.adoc[Container Setup]
@@ -14,35 +14,40 @@
 *** xref:deployment/security/security.adoc[Securing oCIS]
 *** xref:deployment/nfs/nfs.adoc[Network File System Deployment]
 *** xref:deployment/services/services.adoc[Services]
-**** xref:deployment/services/app-provider.adoc[App Provider]
-**** xref:deployment/services/app-registry.adoc[App Registry]
-**** xref:deployment/services/audit.adoc[Audit]
-**** xref:deployment/services/auth-basic.adoc[Auth Basic]
-**** xref:deployment/services/auth-bearer.adoc[Auth Bearer]
-**** xref:deployment/services/auth-machine.adoc[Auth Machine]
-**** xref:deployment/services/frontend.adoc[Frontend]
-**** xref:deployment/services/gateway.adoc[Gateway]
-**** xref:deployment/services/graph.adoc[Graph]
-**** xref:deployment/services/groups.adoc[Groups]
-**** xref:deployment/services/idm.adoc[IDM]
-**** xref:deployment/services/idp.adoc[IDP]
-**** xref:deployment/services/nats.adoc[NATS]
-**** xref:deployment/services/notifications.adoc[Notification]
-**** xref:deployment/services/ocdav.adoc[OCDAV]
-**** xref:deployment/services/ocs.adoc[OCS]
-**** xref:deployment/services/proxy.adoc[Proxy]
-**** xref:deployment/services/search.adoc[Search]
-**** xref:deployment/services/settings.adoc[Settings]
-**** xref:deployment/services/sharing.adoc[Sharing]
-**** xref:deployment/services/store.adoc[Store]
-**** xref:deployment/services/storage-publiclink.adoc[Storage-Publiclink]
-**** xref:deployment/services/storage-shares.adoc[Storage-Shares]
-**** xref:deployment/services/storage-system.adoc[Storage-System]
-**** xref:deployment/services/storage-users.adoc[Storage-Users]
-**** xref:deployment/services/thumbnails.adoc[Thumbnails]
-**** xref:deployment/services/users.adoc[Users]
-**** xref:deployment/services/web.adoc[Web]
-**** xref:deployment/services/webdav.adoc[WebDAV]
+**** General Information
+***** xref:deployment/services/env-var-note.adoc[Environment Variables Notes]
+***** xref:deployment/services/ports-used.adoc[Ports Used]
+//***** Logging
+**** List of Services
+***** xref:deployment/services/s-list/app-provider.adoc[App Provider]
+***** xref:deployment/services/s-list/app-registry.adoc[App Registry]
+***** xref:deployment/services/s-list/audit.adoc[Audit]
+***** xref:deployment/services/s-list/auth-basic.adoc[Auth Basic]
+***** xref:deployment/services/s-list/auth-bearer.adoc[Auth Bearer]
+***** xref:deployment/services/s-list/auth-machine.adoc[Auth Machine]
+***** xref:deployment/services/s-list/frontend.adoc[Frontend]
+***** xref:deployment/services/s-list/gateway.adoc[Gateway]
+***** xref:deployment/services/s-list/graph.adoc[Graph]
+***** xref:deployment/services/s-list/groups.adoc[Groups]
+***** xref:deployment/services/s-list/idm.adoc[IDM]
+***** xref:deployment/services/s-list/idp.adoc[IDP]
+***** xref:deployment/services/s-list/nats.adoc[NATS]
+***** xref:deployment/services/s-list/notifications.adoc[Notification]
+***** xref:deployment/services/s-list/ocdav.adoc[OCDAV]
+***** xref:deployment/services/s-list/ocs.adoc[OCS]
+***** xref:deployment/services/s-list/proxy.adoc[Proxy]
+***** xref:deployment/services/s-list/search.adoc[Search]
+***** xref:deployment/services/s-list/settings.adoc[Settings]
+***** xref:deployment/services/s-list/sharing.adoc[Sharing]
+***** xref:deployment/services/s-list/store.adoc[Store]
+***** xref:deployment/services/s-list/storage-publiclink.adoc[Storage-Publiclink]
+***** xref:deployment/services/s-list/storage-shares.adoc[Storage-Shares]
+***** xref:deployment/services/s-list/storage-system.adoc[Storage-System]
+***** xref:deployment/services/s-list/storage-users.adoc[Storage-Users]
+***** xref:deployment/services/s-list/thumbnails.adoc[Thumbnails]
+***** xref:deployment/services/s-list/users.adoc[Users]
+***** xref:deployment/services/s-list/web.adoc[Web]
+***** xref:deployment/services/s-list/webdav.adoc[WebDAV]
 * Configuration Examples
 ** xref:configuration/office-integration.adoc[Office Integration]
 // *** xref:deployment/deployment/deployment_examples.adoc[Deployment Examples]
