--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -15,9 +15,9 @@
 *** xref:deployment/nfs/nfs.adoc[Network File System Deployment]
 *** xref:deployment/services/services.adoc[Services]
 **** General Information
-***** xref:deployment/services/env-var-note.adoc[Environment Variables Notes]
+***** xref:deployment/services/env-var-note.adoc[Environment Variable Notes]
 ***** xref:deployment/services/ports-used.adoc[Ports Used]
-//***** Logging
+***** xref:deployment/services/logging.adoc[Logging]
 **** List of Services
 ***** xref:deployment/services/s-list/app-provider.adoc[App Provider]
 ***** xref:deployment/services/s-list/app-registry.adoc[App Registry]
