--- a/modules/ROOT/pages/deployment/binary/binary-setup.adoc
+++ b/modules/ROOT/pages/deployment/binary/binary-setup.adoc
@@ -204,7 +204,7 @@ To run the *Infinite Scale runtime* as a {systemd-url}[systemd] service, create 
 
 [source,bash]
 ----
-sudo systemctl edit ocis.service
+sudo systemctl edit --force --full ocis.service
 ----
 
 Then copy the content of the systemd file below into the editor and save it.
