--- a/modules/ROOT/pages/deployment/tips/useful_mount_tip.adoc
+++ b/modules/ROOT/pages/deployment/tips/useful_mount_tip.adoc
@@ -105,6 +105,6 @@ sudo systemctl show <name>.service | grep "After="
 --
 [source,bash]
 ----
-sudo system <name> restart
+sudo systemctl restart <name>
 ----
 --
