--- a/modules/ROOT/pages/deployment/container/orchestration/orchestration.adoc
+++ b/modules/ROOT/pages/deployment/container/orchestration/orchestration.adoc
@@ -59,7 +59,7 @@ For Kubernetes, ownCloud provides basic {helm-charts-ocis-url}[Helm Charts] that
 
 Similarly, when using _docker run_ and handing over command-line parameters for a single container, you can define a `docker-compose.yml` yaml file which defines all the settings and environment variables for each container in one or more files. This is the next step when having multi-container environments.
 
-* Consider when planning to run Infinite Scale via docker compose, the degree freedom is not the same like when using Kubernetes with Helm as you are limited to the same server but it is usually more when running the pure binary when it comes to ease of configuration and maintaining your environment.
+* Consider that when planning to run Infinite Scale via docker compose, the degree of freedom is not the same as when using Kubernetes with Helm as you are limited to the same server but it is usually more when running the pure binary when it comes to ease of configuration and maintaining your environment.
 
 * Use docker compose when planning an extended degree of freedom compared to the binary installation but not needing the full capabilities of Kubernetes and Helm.
 
