--- a/modules/ROOT/pages/deployment/services/ports-used.adoc
+++ b/modules/ROOT/pages/deployment/services/ports-used.adoc
@@ -23,42 +23,42 @@ The following port ranges are used by services:
 | Service
 
 | 9000-9010  | https://owncloud.dev/ocis/[reserved for Infinite Scale]
-| 9100-9104  | xref:/deployment/services/web.adoc[web]
+| 9100-9104  | xref:{s-path}/web.adoc[web]
 | 9105-9109  | https://github.com/owncloud/ocis-hello[hello]
-| 9110-9114  | xref:/deployment/services/ocs.adoc[ocs]
-| 9115-9119  | xref:/deployment/services/webdav.adoc[webdav]
-| 9120-9124  | xref:/deployment/services/graph.adoc[graph]
+| 9110-9114  | xref:{s-path}/ocs.adoc[ocs]
+| 9115-9119  | xxref:{s-path}/webdav.adoc[webdav]
+| 9120-9124  | xref:{s-path}/graph.adoc[graph]
 | 9125-9129  | FREE (formerly used by glauth)
-| 9130-9134  | xref:/deployment/services/idp.adoc[idp]
-| 9135-9139  | xref:/deployment/services/graph-explorer.adoc[graph-explorer]
-| 9140-9141  | xref:/deployment/services/frontend.adoc[frontend]
-| 9142-9143  | xref:/deployment/services/gateway.adoc[gateway]
-| 9144-9145  | xref:/deployment/services/users.adoc[users]
-| 9146-9147  | xref:/deployment/services/auth-basic.adoc[auth-basic]
-| 9148-9149  | xref:/deployment/services/auth-bearer.adoc[auth-bearer]
-| 9150-9153  | xref:/deployment/services/sharing.adoc[sharing]
-| 9154-9156  | xref:/deployment/services/storage-shares.adoc[storage-shares]
-| 9157-9159  | xref:/deployment/services/storage-users.adoc[storage-users]
-| 9160-9162  | xref:/deployment/services/groups.adoc[groups]
-| 9163       | xref:/deployment/services/ocdav.adoc[ocdav]
-| 9164       | xref:/deployment/services/groups.adoc[groups]
-| 9165       | xref:/deployment/services/app-provider.adoc[app-provider]
-| 9166-9169  | xref:/deployment/services/auth-machine.adoc[auth-machine]
-| 9170-9174  | xref:/deployment/services/notifications.adoc[notifications]
-| 9175-9179  | xref:/deployment/services/storage-publiclink.adoc[storage-publiclink]
+| 9130-9134  | xref:{s-path}/idp.adoc[idp]
+| 9135-9139  | xref:{s-path}/graph-explorer.adoc[graph-explorer]
+| 9140-9141  | xref:{s-path}/frontend.adoc[frontend]
+| 9142-9143  | xref:{s-path}/gateway.adoc[gateway]
+| 9144-9145  | xref:{s-path}/users.adoc[users]
+| 9146-9147  | xref:{s-path}/auth-basic.adoc[auth-basic]
+| 9148-9149  | xref:{s-path}/auth-bearer.adoc[auth-bearer]
+| 9150-9153  | xref:{s-path}/sharing.adoc[sharing]
+| 9154-9156  | xref:{s-path}/storage-shares.adoc[storage-shares]
+| 9157-9159  | xref:{s-path}/storage-users.adoc[storage-users]
+| 9160-9162  | xref:{s-path}/groups.adoc[groups]
+| 9163       | xref:{s-path}/ocdav.adoc[ocdav]
+| 9164       | xref:{s-path}/groups.adoc[groups]
+| 9165       | xref:{s-path}/app-provider.adoc[app-provider]
+| 9166-9169  | xref:{s-path}/auth-machine.adoc[auth-machine]
+| 9170-9174  | xref:{s-path}/notifications.adoc[notifications]
+| 9175-9179  | xref:{s-path}/storage-publiclink.adoc[storage-publiclink]
 | 9180-9184  | FREE (formerly used by accounts)
-| 9185-9189  | xref:/deployment/services/thumbnails.adoc[thumbnails]
-| 9190-9194  | xref:/deployment/services/settings.adoc[settings]
+| 9185-9189  | xref:{s-path}/thumbnails.adoc[thumbnails]
+| 9190-9194  | xref:{s-path}/settings.adoc[settings]
 | 9195-9199  | FREE
-| 9200-9204  | xref:/deployment/services/proxy.adoc[proxy]
-| 9205-9209  | xref:/deployment/services/proxy.adoc[proxy]
+| 9200-9204  | xref:{s-path}/proxy.adoc[proxy]
+| 9205-9209  | xref:{s-path}/proxy.adoc[proxy]
 | 9210-9214  | FREE
-| 9215-9219  | xref:/deployment/services/storage-system.adoc[storage-system]
-| 9220-9224  | xref:/deployment/services/search.adoc[search]
+| 9215-9219  | xref:{s-path}/storage-system.adoc[storage-system]
+| 9220-9224  | xref:{s-path}/search.adoc[search]
 | 9225-9229  | FREE
-| 9230-9234  | xref:/deployment/services/nats.adoc[nats]
-| 9235-9239  | xref:/deployment/services/idm.adoc[idm]
-| 9240-9244  | xref:/deployment/services/app-registry.adoc[app-registry]
+| 9230-9234  | xref:{s-path}/nats.adoc[nats]
+| 9235-9239  | xref:{s-path}/idm.adoc[idm]
+| 9240-9244  | xref:{s-path}/app-registry.adoc[app-registry]
 | 9245-9249  | FREE
 | 9250-9254  | https://github.com/owncloud/ocis/tree/master/ocis/pkg/runtime[ocis server (runtime)]
 |===
