Improve env var notes

--- a/modules/ROOT/pages/deployment/services/env-var-note.adoc
+++ b/modules/ROOT/pages/deployment/services/env-var-note.adoc
@@ -9,6 +9,18 @@
 
 == Reading Notes
 
+Service name vs. environment variable name::
++
+[TIP]
+====
+Environment variable names are always upper case and words are connected with an underscore. They start with the name of the service. If the service name is more than one word and the words are connected with a dash, the dash is replaced by an underscore. This info is useful when you search for environment variables based on the service name.
+
+Example: `auth-basic` -> `AUTH_BASIC_XXX`
+====
+
+Global scale environment variables::
+Environment variables starting with `OCIS_` are variables that have a global scope. This means, their setting is valid for all services, if not explicitly overwritten by a correspondent service varibale.
+
 Multiple environment variables for the same purpose::
 +
 [TIP]
@@ -21,15 +33,6 @@ In the tables describing the environment variables, you may occasionally see two
 Taking the `webdav` service as an example, you want to set the `OCIS_URL` as a generic value, but for webdav, you want to use a different URL defined with `OCIS_PUBLIC_URL`.
 ====
 
-Service name vs. environment variable name::
-+
-[TIP]
-====
-Environment variable names are always upper case and words are connected with an underscore. They start with the name of the service. If the service name is more than one word and the words are connected with a dash, the dash is replaced by an underscore. This info is useful when you search for environment variables based on the service name.
-
-Example: `auth-basic` -> `AUTH_BASIC_XXX`
-====
-
 Default values containing curly brackets::
 +
 [TIP]
@@ -38,9 +41,14 @@ In the table showing the environment variables of a service, the _Default Value_
 ====
 
 Note on paths for binary vs. container installations::
-If a service offers path customization like the `IDM_LDAPS_CERT` (see the xref:{s-path}/idm.adoc[IDM] documentation), the path set references the environment used. This means, when using the binary installation, the path is based on the host filesystem. When using a container installation, the path references a target inside the container.
+If a service offers path customization like the `IDM_LDAPS_CERT` (see the xref:{s-path}/idm.adoc[IDM] documentation), the path set references the environment used. This means:
++
+--
+* When using the binary installation, the path is based on the host filesystem.
+* When using a container installation, the path references a target inside the container.
 +
 [NOTE]
 ====
 If you're using a container and want or need to keep all data persistent, you need to provide host filesystem access to the container, which you can do with mounts or volumes.
 ====
+--
