--- a/modules/ROOT/pages/deployment/configuration/_ocis-config.adoc
+++ b/modules/ROOT/pages/deployment/configuration/_ocis-config.adoc
@@ -2,7 +2,7 @@
 :toc: right
 :toclevels: 1
 
-The configuration of Infinite Scale is simple yet powerful and extremely flexible. If you have downloaded the binary from ownCloud directly instead of installing it via the package manager of your Linux operating system, copy or move the file to `/usr/bin/ocis` and make it executable with the command: `chmod +x /usr/bin/ocis`.
+The configuration of Infinite Scale is simple yet powerful and extremely flexible. If you have downloaded the binary from ownCloud directly instead of installing it via the package manager of your Linux operating system, copy or move the file to `/usr/local/bin/ocis` and make it executable with the command: `chmod +x /usr/local/bin/ocis`.
 
 Enter `ocis help` and you'll see all available options for the command.
 
